# spcol

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  gui.cpp  gui.hpp  guibase.hpp  guibin.cpp  guibin.hpp  guicontainer.cpp  guicontainer.hpp  guidisplay.cpp  guidisplay.hpp  guilabel.cpp  guilabel.hpp  guiobject.cpp  guiobject.hpp  guiwidget.cpp  guiwidget.hpp  guiwindow.cpp  guiwindow.hpp  main.cxx  private.hpp  scbase.hpp  scgame.cpp  scgame.hpp  scmap.cpp  scmap.hpp
